# olx_scrapper

./: Cargo.toml
db/: drop_table.sh  run_db_scripts.sh  setup_db.sql
db/sql/: 02_insert_dummies.sql
examples/: main.rs
src/: db.rs  histogram.rs  lib.rs
