[package]
name = "olx_scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tokio-native-tls = "0.3.1"
tokio-util = "0.7.9"
regex = "1.10.4"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
reqwest = "0.12.4"
scraper = "0.19.0"
plotters = { version = "0.3.5", default_features = false, features = ["svg_backend", "bitmap_backend", "errorbar", "line_series", "histogram", "point_series"] }
#polars = "0.40.0"


[dev-dependencies]
serde_json = "1.0.68"
